﻿v1.4.8

Ready Check
* Stones
** New: Tracking for Coruscating Powerstone.
** New: Tracking for Exceptional Whetstone.
* Potions
** New: Tracking for Prime Brightsurge Vial.
** New: Tracking for Prime Powersurge Vial.
** New: Tracking for Prime Enduring Vial.
** New: Tracking for Prime Fortified Vial.

Options
* Fixed: Errors when selecting scaling Options with Castbars.

Mechanic Spy
* New: Added MechObj:SetSource() if you'd rather display the source of triggers rather than targets.

Instances

Raids
* Endless Eclipse
** Progenitor Saetos
*** Change: Entropic Abyss will now only show 1 mechanic spy object.
*** Change: Ebon Eruption spy will now display the channel duration.

Expert Dungeons
* Exodus of the Storm Queen
** General Grim
*** New: Added an alert for Flash Freeze.

Normal Dungeons
* Exodus of the Storm Queen
** Valthundra
*** New: Added an alert for Hide mechanic
*** New: Added an alert for Stack in mechanic (Frost Bound).
** General Grim
*** New: Added an alert for Flash Freeze.


----
v1.4.7

System
* Fixed: Major crash with those who updated previous versions with the Rift tab selected (Errors 369 and 81)

Translations
* Updated French translations for Grim Awakening.

----
v1.4.6

Menu System
* Change: Now uses far less memory (around 10Mb+).
* Stage 1: Complete
* Complete rewrite of the underlying menu code in preparation for new functionality.
* At the moment this is just reproducing old functionality.

Plug-Ins
* Mark-It and Add-Watch will require updating.

Ready Check
* New: Added Vampiric Essence. (60: Warrior, Cleric, Rogue - Tank - High)
* New: Added Storm Sigil. (60: Warrior - Medium)

Encounters
* Change: Instance Headers and Encounter Files no longer create menu items within their files.

Grim Awakening
* New: Kyzan.
** New: Encounter Created.
** New: Timer and Alert added for Delayed Annihilation.
** New: Spy added for Soul Leech.
** New: Spy added for Abhorrent Growth.
** New: Spy added for Phase Rip.
** New: Spy added for Bone Harvest.