@@ -10,9 +10,9 @@ Author = "Paul Snart"
 Website = "http://www.facebook.com/KingBossMods"
 Email = "kingbossmods@gmail.com"
 
-Version = "1.4.8.709"
+Version = "1.4.8.711"
 
-Environment = "2.2"
+Environment = "2.3"
 
 RunOnStartup = {
 	"KingMolinator.lua",
